name:                rpn
version:             0.1.0.0
synopsis:            Parse and interpret reverse polish notation files
description:         Reverse Polish Notation Parser / Interpreter
homepage:            https://github.com/Adracus/rpn
license:             BSD3
license-file:        LICENSE
author:              Axel Christ
maintainer:          adracus@gmail.com
copyright:           2018 Axel Christ
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rpn
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
